refactor: Update CSS styles for responsive layout

--- a/index.html
+++ b/index.html
@@ -30,32 +30,116 @@
   <header-container join="/join"></header-container>
   <main class="main">
     <section class="landing">
-			<div class="content-one">
-				<div class="text">
-					<h2 class="title">
+      <div class="content-one">
+        <div class="text">
+          <h2 class="title">
             Inspire, inform, and interact.
-            <br/>
-            Share stories, polls, and connect with authors.
           </h2>
-					<p class="decription">
-						Dive into dynamic discussions with our intuitive poll feature, allowing you to gauge opinions and spark meaningful conversations.
-					</p>
-          <p class="decription">
-            Contribute to topic articles, adding your unique perspective to ongoing debates and discussions.
-					</p>
           <p class="short">
-            Your contributions not only enrich the community but also help foster a culture of shared learning and growth.
+            Inspire and inform others through interactive discussions and meaningful connections.
           </p>
-					<div class="actions">
-						<a href="/join" class="action explore">
-							<span class="text">Get started</span>
-							<svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M13.8055 5.31595C13.6935 5.25395 13.5715 5.22595 13.4515 5.22595C13.1835 5.22595 12.9265 5.36895 12.7905 5.61995C12.5945 5.98495 12.7295 6.43995 13.0945 6.63595C14.9757 7.65095 17.8054 9.64262 18.56 11.2502L4.5 11.2502C4.086 11.2502 3.75 11.5862 3.75 12.0002C3.75 12.4142 4.086 12.7502 4.5 12.7502L18.5584 12.7502C17.8014 14.3594 14.9743 16.3498 13.0945 17.365C12.7295 17.562 12.5945 18.016 12.7905 18.381C12.9875 18.745 13.4445 18.88 13.8055 18.685C14.4665 18.33 20.2505 15.1209 20.2505 11.998C20.2505 8.87895 14.4665 5.67095 13.8055 5.31595Z" fill="black"/>
-							</svg>
-						</a>
-					</div>
-				</div>
-			</div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="columns">
+          <div class="column">
+            <div class="box">
+              <img src="img/home/share.jpg" alt="Share anything">
+              <h3>Share Anything</h3>
+              <p>
+                Create and share captivating stories, insightful articles, and engaging posts that resonate with a global audience.
+              </p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="box"> 
+              <img src="img/home/use.jpg" alt="Reply">
+              <h3>Speak Freely</h3>
+              <p>
+                Dive into conversations and connect with others by replying to their posts, sharing your insights, and fostering meaningful interactions.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <div class="box">
+              <img src="img/home/topic.jpg">
+              <h3>Foster Communities</h3>
+              <p>
+                Contribute to topic articles, adding your unique perspective to ongoing debates and discussions.
+              </p>
+            </div>
+          </div>
+          <div class="column">
+            <div class="box"> 
+              <img src="img/home/mail.jpg">
+              <h3>Liked It? Never Miss It.</h3>
+              <p>
+                Stay informed by subscribing to topics of interest and receiving updates on the latest discussions and content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="content connect">
+      <div class="content">
+        <div class="svg">
+          <img src="img/svgs/join.svg" alt="Join svg image">.
+        </div>
+        <div class="info-side">
+          <h2 class="title">Join the community</h2>
+          <p class="words">
+            On our platform, connect with like-minded individuals passionate about sharing ideas and engaging in
+            meaningful discussions. Join the largest network dedicated to fostering creativity, collaboration, and
+            insightful conversations.
+          </p>
+          <div class="actions">
+            <a href="/join/register" id="book-now" class="book action">Create account</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="content discuss">
+      <div class="content">
+        <div class="info-side">
+          <h2 class="title">Discuss with Passionate Minds</h2>
+          <p class="words">
+            Engage in vibrant discussions with a community of passionate individuals. Our platform connects you with diverse voices, fostering insightful conversations and meaningful connections.
+          </p>
+          <div class="actions">
+            <a href="/join" id="book-now" class="book action">Join to discuss</a>
+          </div>
+        </div>
+        <div class="svg">
+          <img src="img/svgs/discuss.svg" alt="Discuss svg image">
+        </div>
+      </div>
+    </section>
+    <section class="share">
+      <div class="content">
+        <div class="info">
+          <h1 class="title">Download Our Progressive Web App (PWA) for Android</h1>
+          <p>We’ve transformed our Progressive Web App (PWA) into a native-like experience for Android users. Download the APK file to enjoy all the benefits of our PWA with the convenience of an app.</p>
+          <h2>What is a PWA?</h2>
+          <p>A Progressive Web App combines the best of web and mobile apps. It’s designed to work seamlessly on your device, offering offline access, fast performance, and the ability to be added to your home screen just like a native app.</p>
+          <h2>How to Install:</h2>
+          <ol>
+            <li><strong>Download the APK:</strong> Click the link below to download the APK file to your device.</li>
+            <li><strong>Open the File:</strong> Locate the downloaded APK file in your file manager.</li>
+            <li><strong>Install the App:</strong> Tap on the APK file and follow the prompts to install.</li>
+          </ol>
+          <h2>Why Choose Our PWA?</h2>
+          <ul>
+            <li><strong>Enhanced Performance:</strong> Enjoy a fast and responsive experience.</li>
+            <li><strong>Offline Access:</strong> Use the app even when you're not connected to the internet.</li>
+            <li><strong>Home Screen Access:</strong> Add the app to your home screen for quick and easy access.</li>
+          </ul>
+          <a href="your-apk-file-link" download>Download APK Now</a>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <section class="newsletter">
