refactor: Update CSS styles for responsive layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="content-one">
         <div class="text">
           <h2 class="title">
-            Inspire, inform, and interact.
+            Inspire, Inform, and Interact.
           </h2>
           <p class="short">
             Inspire and inform others through interactive discussions and meaningful connections.
