refactor: Update CSS styles for responsive layout

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </script>
 
 <body>
-  <header-container join="/join"></header-container>
+  <header-container join="/join" apk="/app/app.apk"></header-container>
   <main class="main">
     <section class="landing">
       <div class="content-one">
